add reports - get trainings by competency
